--- a/ZadanieNaAvtomatKolleg/ZadanieNaAvtomatKolleg.csproj
+++ b/ZadanieNaAvtomatKolleg/ZadanieNaAvtomatKolleg.csproj
@@ -39,6 +39,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.ConfigurationManager, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Configuration.ConfigurationManager.9.0.0\lib\net462\System.Configuration.ConfigurationManager.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
@@ -76,6 +80,7 @@
     </Compile>
     <Compile Include="GruppaService.cs" />
     <Compile Include="IStudentService.cs" />
+    <Compile Include="IZavOtdeleniaService.cs" />
     <Compile Include="NagruzkaService.cs" />
     <Compile Include="PrepodovatelService.cs" />
     <Compile Include="Program.cs" />
@@ -135,6 +140,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Uhebnia_PlanService.cs" />
+    <Compile Include="ZavOtdeleniaService.cs" />
     <Compile Include="Zav_Otdelenia.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
