--- a/ZadanieNaAvtomatKolleg/packages.config
+++ b/ZadanieNaAvtomatKolleg/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="Unity" version="5.11.10" targetFramework="net48" />
 </packages>
