--- a/ZadanieNaAvtomatKollegWPF/App.config
+++ b/ZadanieNaAvtomatKollegWPF/App.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<connectionStrings>
-		<add name="Zadanie_na_Avtomat_KollegEntities"
-			 connectionString="data source=DESKTOP-E6N8VGF\SQLEXPRESS;initial catalog=Zadanie_na_Avtomat_Kolleg;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework"
-			 providerName="System.Data.SqlClient" />
+		<add name="Zadanie_na_Avtomat_KollegEntities" connectionString="data source=DESKTOP-E6N8VGF\SQLEXPRESS;initial catalog=Zadanie_na_Avtomat_Kolleg;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
