--- a/ZadanieNaAvtomatKollegAPI/appsettings.json
+++ b/ZadanieNaAvtomatKollegAPI/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=your_server;Database=ZadanieNaAvtomatKolleg;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-E6N8VGF\\SQLEXPRESS;Database=Zadanie_na_Avtomat_Kolleg;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
