--- a/ZadanieNaAvtomatKollegWPFNET1/ZadanieNaAvtomatKollegWPFNET1.csproj
+++ b/ZadanieNaAvtomatKollegWPFNET1/ZadanieNaAvtomatKollegWPFNET1.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
 
