--- a/ZadanieNaAvtomatKollegWPFNET1/ZadanieNaAvtomatKollegWPFNET1.csproj
+++ b/ZadanieNaAvtomatKollegWPFNET1/ZadanieNaAvtomatKollegWPFNET1.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
 
