--- a/ZadanieNaAvtomatKollegConsol/ZadanieNaAvtomatKollegConsol.csproj
+++ b/ZadanieNaAvtomatKollegConsol/ZadanieNaAvtomatKollegConsol.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
     <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
